test/invalid-syntax/66128_const_missing_type/const_missing_type.mag
-- Author: 66128, Daniel Sousa

-- Constants must have a type annotation

fun main (_) : Unit -> Unit = 
    const testString = "Test";
    print(testString);